--- a/src/contrib/Queries/Contrib.Queries.csproj
+++ b/src/contrib/Queries/Contrib.Queries.csproj
@@ -117,13 +117,14 @@
   <ItemGroup>
     <Compile Include="BooleanFilter.cs" />
     <Compile Include="BoostingQuery.cs" />
-    <Compile Include="DuplicateFilter.cs" />
+    <Compile Include="ChainedFilter.cs" />
+    <Compile Include="CommonTermsQuery.cs" />
+    <Compile Include="CustomScoreProvider.cs" />
+    <Compile Include="CustomScoreQuery.cs" />
     <Compile Include="FilterClause.cs" />
-    <Compile Include="FuzzyLikeThisQuery.cs" />
-    <Compile Include="Similar\MoreLikeThis.cs" />
+    <Compile Include="Mlt\MoreLikeThis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Similar\MoreLikeThisQuery.cs" />
-    <Compile Include="Similar\SimilarityQueries.cs" />
+    <Compile Include="Mlt\MoreLikeThisQuery.cs" />
     <Compile Include="TermsFilter.cs" />
   </ItemGroup>
   <ItemGroup>
