--- a/src/contrib/Queries/Contrib.Queries.csproj
+++ b/src/contrib/Queries/Contrib.Queries.csproj
@@ -122,6 +122,8 @@
     <Compile Include="CustomScoreProvider.cs" />
     <Compile Include="CustomScoreQuery.cs" />
     <Compile Include="FilterClause.cs" />
+    <Compile Include="Function\FunctionValues.cs" />
+    <Compile Include="Function\ValueSourceScorer.cs" />
     <Compile Include="Mlt\MoreLikeThis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mlt\MoreLikeThisQuery.cs" />
@@ -157,6 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Lucene.Net.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Function\DocValues\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
