CharFilter classes. started work on English analyzer

--- a/src/contrib/Analyzers/Contrib.Analyzers.csproj
+++ b/src/contrib/Analyzers/Contrib.Analyzers.csproj
@@ -145,6 +145,26 @@
     <Compile Include="Core\WhitespaceAnalyzer.cs" />
     <Compile Include="Core\WhitespaceTokenizer.cs" />
     <Compile Include="Core\WhitespaceTokenizerFactory.cs" />
+    <Compile Include="En\EnglishAnalyzer.cs" />
+    <Compile Include="En\EnglishMinimalStemFilter.cs" />
+    <Compile Include="En\EnglishMinimalStemFilterFactory.cs" />
+    <Compile Include="En\EnglishMinimalStemmer.cs" />
+    <Compile Include="En\EnglishPossessiveFilter.cs" />
+    <Compile Include="En\EnglishPossessiveFilterFactory.cs" />
+    <Compile Include="En\KStemData1.cs" />
+    <Compile Include="En\KStemData2.cs" />
+    <Compile Include="En\KStemData3.cs" />
+    <Compile Include="En\KStemData4.cs" />
+    <Compile Include="En\KStemData5.cs" />
+    <Compile Include="En\KStemData6.cs" />
+    <Compile Include="En\KStemData7.cs" />
+    <Compile Include="En\KStemData8.cs" />
+    <Compile Include="En\KStemFilter.cs" />
+    <Compile Include="En\KStemFilterFactory.cs" />
+    <Compile Include="En\KStemmer.cs" />
+    <Compile Include="En\PorterStemFilter.cs" />
+    <Compile Include="En\PorterStemFilterFactory.cs" />
+    <Compile Include="En\PorterStemmer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Standard\ClassicAnalyzer.cs" />
     <Compile Include="Standard\ClassicFilter.cs" />
