--- a/src/contrib/SimpleFacetedSearch/SimpleFacetedSearch.csproj
+++ b/src/contrib/SimpleFacetedSearch/SimpleFacetedSearch.csproj
@@ -109,6 +109,7 @@
     <Compile Include="HitsPerFacet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleFacetedSearch.cs" />
+    <Compile Include="FastFacetedSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\Lucene.Net.csproj">
