--- a/src/contrib/Queries/Contrib.Queries.csproj
+++ b/src/contrib/Queries/Contrib.Queries.csproj
@@ -122,8 +122,65 @@
     <Compile Include="CustomScoreProvider.cs" />
     <Compile Include="CustomScoreQuery.cs" />
     <Compile Include="FilterClause.cs" />
+    <Compile Include="Function\BoostedQuery.cs" />
+    <Compile Include="Function\DocValues\BoolDocValues.cs" />
+    <Compile Include="Function\DocValues\DocTermsIndexDocValues.cs" />
+    <Compile Include="Function\DocValues\DoubleDocValues.cs" />
+    <Compile Include="Function\DocValues\FloatDocValues.cs" />
+    <Compile Include="Function\DocValues\IntDocValues.cs" />
+    <Compile Include="Function\DocValues\LongDocValues.cs" />
+    <Compile Include="Function\DocValues\StrDocValues.cs" />
+    <Compile Include="Function\FunctionQuery.cs" />
     <Compile Include="Function\FunctionValues.cs" />
+    <Compile Include="Function\ValueSource.cs" />
     <Compile Include="Function\ValueSourceScorer.cs" />
+    <Compile Include="Function\ValueSources\BoolFunction.cs" />
+    <Compile Include="Function\ValueSources\ByteFieldSource.cs" />
+    <Compile Include="Function\ValueSources\BytesRefFieldSource.cs" />
+    <Compile Include="Function\ValueSources\ConstNumberSource.cs" />
+    <Compile Include="Function\ValueSources\ConstValueSource.cs" />
+    <Compile Include="Function\ValueSources\DefFunction.cs" />
+    <Compile Include="Function\ValueSources\DivFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\DocFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\DoubleConstValueSource.cs" />
+    <Compile Include="Function\ValueSources\DoubleFieldSource.cs" />
+    <Compile Include="Function\ValueSources\DualFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\FieldCacheSource.cs" />
+    <Compile Include="Function\ValueSources\FloatFieldSource.cs" />
+    <Compile Include="Function\ValueSources\IDFValueSource.cs" />
+    <Compile Include="Function\ValueSources\IfFunction.cs" />
+    <Compile Include="Function\ValueSources\IntFieldSource.cs" />
+    <Compile Include="Function\ValueSources\JoinDocFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\LinearFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\LiteralValueSource.cs" />
+    <Compile Include="Function\ValueSources\LongFieldSource.cs" />
+    <Compile Include="Function\ValueSources\MaxDocValueSource.cs" />
+    <Compile Include="Function\ValueSources\MaxFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\MinFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiBoolFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiFunction.cs" />
+    <Compile Include="Function\ValueSources\MultiValueSource.cs" />
+    <Compile Include="Function\ValueSources\NormValueSource.cs" />
+    <Compile Include="Function\ValueSources\NumDocsValueSource.cs" />
+    <Compile Include="Function\ValueSources\OrdFieldSource.cs" />
+    <Compile Include="Function\ValueSources\PowFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ProductFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\QueryValueSource.cs" />
+    <Compile Include="Function\ValueSources\RangeMapFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ReciprocalFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ReverseOrdFieldSource.cs" />
+    <Compile Include="Function\ValueSources\ScaleFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\ShortFieldSource.cs" />
+    <Compile Include="Function\ValueSources\SimpleBoolFunction.cs" />
+    <Compile Include="Function\ValueSources\SimpleFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\SingleFunction.cs" />
+    <Compile Include="Function\ValueSources\SumFloatFunction.cs" />
+    <Compile Include="Function\ValueSources\SumTotalTermFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\TermFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\TFValueSource.cs" />
+    <Compile Include="Function\ValueSources\TotalTermFreqValueSource.cs" />
+    <Compile Include="Function\ValueSources\VectorValueSource.cs" />
     <Compile Include="Mlt\MoreLikeThis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mlt\MoreLikeThisQuery.cs" />
@@ -160,9 +217,7 @@
   <ItemGroup>
     <None Include="Lucene.Net.snk" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Function\DocValues\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
