--- a/src/contrib/Analyzers/Contrib.Analyzers.csproj
+++ b/src/contrib/Analyzers/Contrib.Analyzers.csproj
@@ -165,6 +165,14 @@
     <Compile Include="En\PorterStemFilter.cs" />
     <Compile Include="En\PorterStemFilterFactory.cs" />
     <Compile Include="En\PorterStemmer.cs" />
+    <Compile Include="Miscellaneous\EmptyTokenStream.cs" />
+    <Compile Include="Miscellaneous\InjectablePrefixAwareTokenFilter.cs" />
+    <Compile Include="Miscellaneous\KeywordMarkerFilter.cs" />
+    <Compile Include="Miscellaneous\PatternAnalyzer.cs" />
+    <Compile Include="Miscellaneous\PrefixAndSuffixAwareTokenFilter.cs" />
+    <Compile Include="Miscellaneous\PrefixAwareTokenStream.cs" />
+    <Compile Include="Miscellaneous\SetKeywordMarkerFilter.cs" />
+    <Compile Include="Miscellaneous\SingleTokenTokenStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Standard\ClassicAnalyzer.cs" />
     <Compile Include="Standard\ClassicFilter.cs" />
@@ -182,6 +190,7 @@
     <Compile Include="Standard\Std31\StandardTokenizerImpl31.cs" />
     <Compile Include="Standard\Std34\StandardTokenizerImpl34.cs" />
     <Compile Include="Support\AbstractSet.cs" />
+    <Compile Include="Support\IAppendable.cs" />
     <Compile Include="Support\StringExtensions.cs" />
     <Compile Include="Util\AbstractAnalysisFactory.cs" />
     <Compile Include="Util\AnalysisSPILoader.cs" />
@@ -193,6 +202,7 @@
     <Compile Include="Util\IMultiTermAwareComponent.cs" />
     <Compile Include="Util\IResourceLoader.cs" />
     <Compile Include="Util\IResourceLoaderAware.cs" />
+    <Compile Include="Util\OpenStringBuilder.cs" />
     <Compile Include="Util\StopwordAnalyzerBase.cs" />
     <Compile Include="Util\TokenFilterFactory.cs" />
     <Compile Include="Util\TokenizerFactory.cs" />
@@ -221,7 +231,6 @@
     <Folder Include="Fa\" />
     <Folder Include="Fr\" />
     <Folder Include="Hunspell\" />
-    <Folder Include="Miscellaneous\" />
     <Folder Include="NGram\" />
     <Folder Include="Nl\" />
     <Folder Include="Payloads\" />
