--- a/src/contrib/Memory/Contrib.Memory.csproj
+++ b/src/contrib/Memory/Contrib.Memory.csproj
@@ -98,15 +98,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CollectionsHelper.cs" />
-    <Compile Include="EmptyCollector.cs" />
+    <Compile Include="FillingCollector.cs" />
     <Compile Include="KeywordTokenStream.cs" />
+    <Compile Include="MemoryDocsAndPositionsEnum.cs" />
+    <Compile Include="MemoryDocsEnum.cs" />
     <Compile Include="MemoryIndex.cs" />
-    <Compile Include="MemoryTermPositionVector.cs" />
+    <Compile Include="MemoryIndexNormDocValues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SliceByteStartArray.cs" />
     <Compile Include="TermComparer.cs" />
-    <Compile Include="MemoryTermEnum.cs" />
-    <Compile Include="MemoryTermPositions.cs" />
+    <Compile Include="MemoryTermsEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\Lucene.Net.csproj">
